# synchronizer

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check-release.yml  python-tests.yml  trigger_precommit.yml
jupyter-config/: jupyter_server_synchronizer.json
jupyter_server_synchronizer/: __init__.py  _version.py  extension.py  gateway.py  handlers.py  kernel_db.py  kernel_records.py  manager.py  traits.py
tests/: test_kernel_db.py  test_kernel_records.py
