[metadata]
name = jupyter_server_synchronizer
version = attr: jupyter_server_synchronizer._version.__version__
description = A server extension for synching managers in a running Jupyter Server.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = COPYING.md
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter-server-synchronizer.readthedocs.io
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://jupyter-server-synchronizer.readthedocs.io
    Funding = https://numfocus.org/donate
    Source = https://github.com/jupyter-server/synchronizer
    Tracker = https://github.com/jupyter-server/synchronizer/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    "" = "jupyter_server_synchronizer"
python_requires = >=3.7
install_requires =
    jupyter_server

[options.extras_require]
test =
    coverage
    pre-commit
    pytest-cov
    pytest-timeout
    pytest-tornasync
    pytest>=6.0

[options.packages.find]
exclude =
    docs.*
    examples.*
    tests
    tests.*

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841

[options.data_files]
etc/jupyter/jupyter_server_config.d =
    jupyter-config/jupyter_server_synchronizer.json
